--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my first web site</title>
+    <title>my first website</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/ef25e05f4f.js"
@@ -11,21 +11,12 @@
     ></script>
   </head>
   <body bgcolor="CDCDCD">
-    <div class="header">
-      <div>
-        <i><a class="wera1" href="">Home</a></i>
-      </div>
-      <div>
-        <i><a class="wera2" href="">Print</a></i>
-      </div>
-      <div>
-        <i><a class="wera4" href="">About</a></i>
-      </div>
-      <div>
-        <i><a class="wera3" href="">Web</a></i>
-      </div>
-    </div>
-
+<div class="header">
+     <div><i><a class="wera1" href="index.html">Home</a></i></div>
+      <div><i><a class="wera2" href="index2.html">Print</a></i></div>
+      <div><i><a class="wera3" href="">Web</a></i></div>
+      <div><i><a class="wera04" href="">About</a></i></div>
+</div>
     <div class="wre1"><i></i></div>
     <div class="test1"><i>TOKYO</i></div>
     <div class="test2"><i>DESIGN</i></div>
@@ -41,8 +32,8 @@
     <br />
     <div class="obj1">
       <a href="  "> <img src="images/1.webp" class="obj2" /></a>
-      <a href="  "><img src="images/2.webp" class="obj3" /></a>
-      <a href="  "><img src="images/3.webp" class="obj4" /></a>
+      <a href=" "><img src="images/2.webp" class="obj3" /></a>
+      <a href="index2.html"><img src="images/3.webp" class="obj4" /></a>
     </div>
     <div class="write1"><i>Web</i></div>
     <div class="write2"><i>Print</i></div>
@@ -59,5 +50,6 @@
     <div class="TOKYO">
       <p>© 2035 by TOKYO DESIGN. Powered and secured by <div class="TOKYO1"><a href="  ">wix</a></div></p>
     </div>
+    
   </body>
 </html>
